<resources>
    <string name="app_name">MiRestaurante</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recordarme">Recordarme</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="calle">Calle</string>
    <string name="numero_calle">N°Calle</string>
    <string name="user_registration">Registo de Usuario</string>
    <string name="successful_user_resgistration">Se registro exitosamente el usuario!!</string>
    <string name="continue_text">Continuar</string>
    <string name="wait_please">Espere por favor</string>
    <string name="user_authenticator_message">Por favor espere mientras se validan credenciales</string>
    <string name="bebidas">Bebidas</string>
    <string name="platos">Platos</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="menu_platos">Platos</string>
    <string name="menu_map">Mapa</string>
    <string name="menu">Menu</string>
    <string name="mi_restaurante">Mi restaurante</string>
    <string name="user_name">User Name</string>
    <string name="user_description">User Description</string>
    <string name="invalid_credentials">Credenciales invalidas</string>
</resources>