<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/menu_book_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bebidas"
            android:icon="@drawable/bottle_wine_icon"
            android:title="@string/menu_bebidas" />
        <item
            android:id="@+id/nav_platos"
            android:icon="@drawable/knife_and_fork_icon"
            android:title="@string/menu_platos" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_map" />
    </group>
</menu>