<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu_home">

    <fragment
        android:id="@+id/nav_menu_home"
        android:name="com.example.mirestaurante.ui.home.HomeMenuFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_bebidas"
        android:name="com.example.mirestaurante.ui.bebidas.BebidasFragment"
        android:label="@string/menu_bebidas"
        tools:layout="@layout/fragment_bebidas" />

    <fragment
        android:id="@+id/nav_platos"
        android:name="com.example.mirestaurante.ui.platos.PlatosFragment"
        android:label="@string/menu_platos"
        tools:layout="@layout/fragment_platos" />
</navigation>