<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:contentDescription=""
        android:src="@drawable/restaurant_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuidline" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/email"
        style="@style/editTextStyle"
        android:layout_width="@dimen/login_box_width"
        android:layout_height="@dimen/login_box_height"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="@dimen/login_box_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/hint_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="@dimen/login_box_width"
            android:layout_height="@dimen/login_box_height"
            android:hint="@string/contrasena"
            android:autofillHints=""
            android:inputType="textPassword"
            style="@style/editTextStyle"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberUserCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/primary_color"
        android:text="@string/recordarme"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/passwordContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer" />

    <Button
        android:id="@+id/loginButton"
        style="@style/buttonStyle"
        android:layout_width="@dimen/login_box_width"
        android:layout_height="@dimen/login_box_height"
        android:layout_marginTop="30dp"
        android:text="@string/ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberUserCheckbox" />

    <Button
        android:id="@+id/registerButton"
        style="@style/buttonStyle"
        android:layout_width="@dimen/login_box_width"
        android:layout_height="@dimen/login_box_height"
        android:layout_marginTop="20dp"
        android:text="@string/registrarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
